--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev --experimental-https --port 4000",
+    "dev:mock": "NEXT_PUBLIC_USE_MOCK=true next dev --experimental-https --port 4000",
+    "dev:db": "NEXT_PUBLIC_USE_MOCK=false next dev --experimental-https --port 4000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -37,7 +39,7 @@
     "better-auth": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "inversify": "^7.0.0-alpha.5",
+    "inversify": "^7.5.2",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
     "next-themes": "^0.4.6",
@@ -56,6 +58,7 @@
     "@types/node": "^20.17.25",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/reflect-metadata": "^0.0.5",
     "prisma": "^6.9.0",
     "tailwindcss": "^4",
     "tsx": "^4.19.3",
