--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ES2017",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
+    "types": ["reflect-metadata"],
     "skipLibCheck": true,
     "strict": true,
     "noEmit": true,
