--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "better-auth": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "inversify": "^7.5.2",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
