--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --experimental-https --port 4000",
-    "dev:mock": "cross-env NEXT_PUBLIC_USE_MOCK=true next dev --experimental-https --port 4000",
-    "dev:db": "cross-env NEXT_PUBLIC_USE_MOCK=false next dev --experimental-https --port 4000",
+    "dev": "node server.js",
+    "dev:next": "next dev",
+    "dev:mock": "cross-env NEXT_PUBLIC_USE_MOCK=true node server.js",
+    "dev:db": "cross-env NEXT_PUBLIC_USE_MOCK=false node server.js",
     "build": "next build",
     "build:mock": "cross-env NEXT_PUBLIC_USE_MOCK=true next build",
     "build:real": "cross-env NEXT_PUBLIC_USE_MOCK=false next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
     "test": "jest",
@@ -22,7 +23,8 @@
     "db:migrate": "prisma migrate dev",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
-    "db:seed": "tsx prisma/seed.ts"
+    "db:seed": "tsx prisma/seed.ts",
+    "db:generate": "prisma generate"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -54,6 +56,8 @@
     "@trpc/next": "^11.4.2",
     "@trpc/react-query": "^11.4.2",
     "@trpc/server": "^11.4.2",
+    "@types/bcryptjs": "^3.0.0",
+    "bcryptjs": "^3.0.2",
     "better-auth": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
