Update game security and optimization features. Mark security and optimization tasks as completed in the project documentation. Add new dependencies for Redis caching and compression in package.json and package-lock.json. Enhance game router with security validation and rate limiting functionalities.

--- a/package.json
+++ b/package.json
@@ -61,15 +61,19 @@
     "better-auth": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "compression": "^1.8.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.18.1",
     "gsap": "^3.13.0",
+    "ioredis": "^5.6.1",
+    "lru-cache": "^11.1.0",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.1",
+    "redis": "^5.5.6",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.1",
