--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "db:migrate": "prisma migrate dev",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
+    "db:clean": "prisma migrate reset",
     "db:seed": "tsx prisma/seed.ts",
     "db:generate": "prisma generate"
   },
